--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "firebase": "^10.5.2",
     "ionic": "^5.4.16",
     "ionicons": "^7.0.0",
