se terminó todo el crud, ya ta listo

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/cli": "^7.1.5",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "angular": "^1.8.3",
     "firebase": "^10.6.0",
     "ionic": "^5.4.16",
     "ionicons": "^7.0.0",
@@ -48,7 +50,7 @@
     "@angular-eslint/eslint-plugin-template": "^16.0.0",
     "@angular-eslint/schematics": "^16.0.0",
     "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "16.2.0",
+    "@angular/cli": "^16.2.0",
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
