--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/android": "^5.5.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "^5.3.0",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
@@ -38,6 +39,7 @@
     "ionicons": "^7.0.0",
     "json-server": "^0.17.3",
     "jsqr": "^1.4.0",
+    "mapbox-gl": "^2.15.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
@@ -58,6 +60,7 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.3.0",
+    "@types/mapbox-gl": "^2.7.18",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
