--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor-mlkit/barcode-scanning": "^5.3.0",
     "@capacitor/android": "^5.5.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.7",
     "@capacitor/core": "^5.3.0",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
@@ -31,8 +33,10 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/cli": "^7.1.5",
+    "@ionic/pwa-elements": "^3.2.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@zxing/library": "^0.20.0",
     "angular": "^1.8.3",
     "firebase": "^10.6.0",
     "ionic": "^5.4.16",
